--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -26,7 +26,8 @@
     margin-bottom: 10px;
     border-radius: 1em;
     border: whitesmoke 3px solid;
-    padding: 70px;
+    padding: 30px;
+    padding-bottom: 30px;
     box-shadow: inset 0 0 150px white;
 }
 
@@ -44,12 +45,14 @@
 }
 
 @media (max-width: 600px){
+    .div-Carousel h1{
+        font-size: 2rem;
+    }
     .img-carousel{
         height: 75vh;
       
     }
     .div-Form{
-        margin-bottom: 10px;
         border-radius: 1em;
         border: whitesmoke 3px solid;
         padding: 20px;
